## tslib 1.10

This release includes the following bugfixes:
* c03f7c9 tools: ts_uinput_start.sh: fix usage of ts_uinput -d -v
* 47e7ab5 input-raw: Fix wrong first slot values by using calloc instead of malloc



## tslib 1.9

This release includes libts version 0.6.0 and the following changes:
* new `module iir` infinite impulse response filter
* `module_raw galax` is deprecated. Users should switch to `module_raw input`
* multitouch for (at least) eGalax 210 (`module_raw input` and `ts_read_mt()`)
* new `ts_verify` API test program
* `ts_uinput -d -v` prints the new /dev/input/eventX device node before returning
* experimental support for GNU / Hurd

This release includes the following bugfixes:
* fix support for protocol type A devices (for example Sitronix ST1232)
* fix the `skip` filter's read_mt() multitouch operation
* 338d2e4 input-raw: add MT protocol type A support to ts_read()
* e47df79 input-raw: fix pressure capable multitouch devices
* dbb8f4c ts_uinput: correctly return in case forking fails
* 73773ac fbutils-linux: fix framebuffer errors on 64 bit systems
* 4d63bfa input-raw: fix ts_read_mt for non-MT devices without pressure


## tslib 1.8

tslib 1.8 is backwards compatible. Changes since last release include:
* experimental support for building on Windows (using MSYS2)
* fixed ts_read_mt() in non-blocking operation when trying to read more than
  1 sample, see bugfixes
* added workaround for strangely behaving eGalax model 210 devices, see bugfixes
* bugfixes
  - 388d3da input-raw: ts_read_mt: fix returning actually read samples
  - c7f0966 debounce: use signed time values
  - 9a9b0c9 pthres: read_mt: fix internal pressure state handling
  - fa10e4c galax: version 210: use ABS_MT_DISTANCE to find pressure 0


## tslib 1.7

Changes since last release:
* ts_read_mt() now consistently returns errno set by read() when using
  module_raw input
* extended ts_print_mt to test more of our API
* ts_print_mt --raw replaces the ts_print_raw_mt program