@@ -17,4 +17,5 @@ dist_man_MANS = \
 	ts_close.3 \
 	ts_config.3 \
 	ts_setup.3 \
+	ts_libversion.3 \
 	ts_verify.1
